--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
 	<title>git lab</title>
+	<link href="index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1>Git Practice</h1>
-
+	<p>Today we are learning about git!</p>
 </body>
 
 </html>
