--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Git Practice</h1>
-	<p>Today we are learning about git!</p>
+	<p>Today we are learning about git!Hahahahahahahah</p>
 </body>
 
 </html>
